--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,9 @@
     <title>Chat</title>
     <script type="text/javascript" src="./lib/js/require.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
+	<script type ="text/javascript">
+		socket = io();	
+	</script>
 </head>
 <body>
 </body>
