--- a/views/main.ejs
+++ b/views/main.ejs
@@ -19,11 +19,9 @@
     <script type="text/javascript" src="lib/js/debug.js"></script>
     <script type="text/javascript" src="lib/js/chat.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
-	<style	type="text/css">
-		.message {
-			color	: green;
-		}
-	</style>
+	<script type ="text/javascript">
+		socket = io();	
+	</script>
 </head>
 <body>
     <div class="ui-layout-north ui-widget-content" style="display: none;">
